@@ -1,6 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- Maya camera no longer get's stuck in "rotating" state when a mouse-up event is lost (thx @ JLouisB for reporting).
 - Focus behavior of IGUIEnvironment now controllable (right-click focus, mouse-over focus). Disabled elements no longer get the focus unless users enforce it.
 - Buttons can now now have 7 more image-states, 1 more sprite-state and the sprites are now scaleable.
 - Spritebanks can now draw scaled sprites and are a little easier to use.
